--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link rel="shortcut icon" href="./favicon.png" type="image/x-icon">
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>React App</title>
+    <title>Site de Receitas</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
